# PAL

huffman/: Makefile  encode  encode.c  list.c
uloha0/: Makefile  main  main.c  main.tgz  test
uloha1/: Makefile  big-input.txt  diamant.txt  input2.txt  input3.txt  main  main.c  main2  main2.c  run.sh  run2.sh
uloha2/: Makefile  gen  gen.c  gen.py  gen_uplny  gen_uplny.c  input  input2  input3  input4  input5  main  main.c  output  run.sh  test
uloha3/: Makefile  Makefile.am  Makefile.in  callgrind.out.16236  config.h  config.h.in  config.status  configure  configure.in  configure.scan  gen-compl.py  run.sh  test
uloha3/min/pal/: Main.java
uloha3/min/pal/disjointset/: DisjointSet.java  SetElement.java
uloha3/min/pal/domain/: Edge.java
uloha3/min/pal/forrest/: Forrest.java  ForrestElement.java
uloha3/min/pal/heap/: BinomialHeap.java
uloha3/src/: Makefile  Makefile.am  Makefile.in  binomial_heap.c  binomial_heap.h  disjoint_set.c  disjoint_set.h  forest.c  forest.h  list.c  list.h  main.c  pal3  stack.c  stack.h
uloha3/src/.deps/: binomial_heap.Po  disjoint_set.Po  forest.Po  list.Po  main.Po  stack.Po
uloha4/: Makefile  main  main.c  main.tgz  test.sh
uloha4/inputs/: 00.in  01.in  02.in  03.in  04.in  05.in  06.in  07.in  08.in  09.in  1.in  2.in  4.in
